bookings/static/bookings/styles.css
body {
  background-image: url("/static/bookings/fondo.png");
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  background-attachment: fixed;
  padding-top: 130px;
}   

.navbar {
    background-color: white;
    height: 100px;
}

.primary-button {
    background-color: #0078D7;
    color: #fff;
    font-size: 14px;
    padding: 8px 20px;
    border-radius: 50px;
    text-decoration: none;
    transition: 0.3s background-color;
    margin-right: 10px;
}

button.primary-button {
    border: none;
    font: inherit;
    cursor: pointer;
    outline: none;
    appearance: none;
}

#login-button, #edit-button {
    background-color: black;
}

#log-out-button {
    background-color: #ff4d4d;
}

.login-button:hover {
    background-color: #005A9E;
}

#log-out-button:hover {
    background-color: #e60000;
}

.nav-link {
    color: #666777;
    font-weight: 500;
    font-family: 'Arial', sans-serif;
}

.alert ul {
    list-style: none;
    padding: 0;
    margin: 0;
}

#h1Index {
    color: #fff;
    font-size: 3rem;
    font-weight: 800;
    text-shadow: none;
}

.h2Views {
    color: #fff;
    font-size: 2.5rem;
    font-weight: 600;
    text-shadow: none;
}

.notResultsFound {
    opacity: 0.7;
}

.form-label {
    font-size: 0.75rem;
    font-weight: 800;
    color: #495057;
    text-transform: uppercase;
}

.form-check-label {
    font-size: 0.85rem;
    font-weight: 700;
    color: #495057;
}
.no-display {
    display: none;
}

.logo-custom { height: 70px; width: auto; }
.logo-custom-display { height: 60px; width: auto; }
.solo-movil { display: none; }
.solo-pc { display: flex; }

@media (max-width: 750px) {
    .solo-pc { display: none; }
    .solo-movil { display: flex; flex-direction: row; flex-wrap: wrap; }
    .login-button { padding: 8px 15px; font-size: 13px; }
    .offcanvas-body { padding-top: 0 !important; }
}

@media (max-width: 465px) {
    .logo-custom { height: 43px; }
}

@media (max-width: 400px) {
    .logo-custom-display { height: 50px; }
}

